--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
                   href="https://www.github.com/javierpzh"
-                  >Github</a
+                  >GitHub</a
                 >
               </li>
             </ul>
