--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,8 +31,16 @@
                 ><i
                   class="lg:text-gray-300 text-gray-500 far fa-file-alt text-lg leading-lg mr-2"
                 ></i>
-                Blog</a
-              >
+                Blog
+              </a>
+              <a
+                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
+                href="/about"
+                ><i
+                  class="lg:text-gray-300 text-gray-500 fas fa-child text-lg leading-lg mr-2"
+                ></i>
+                Sobre mí
+              </a>
             </li>
           </ul>
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
@@ -44,26 +52,6 @@
                   class="lg:text-gray-300 text-gray-500 fab fa-linkedin-in text-lg leading-lg "
                 ></i
                 ><span class="lg:hidden inline-block ml-2">LinkedIn</span></a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://www.instagram.com/javierpzh"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-instagram text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Instagram</span></a
-              >
-            </li>
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="https://twitter.com/jperezhid_"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Twitter</span></a
               >
             </li>
             <li class="flex items-center">
