--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,41 +3,29 @@
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap">
       <div class="w-full lg:w-5/12 px-4">
-        <h4 class="text-3xl font-semibold">¡Mantengámonos en contacto!</h4>
+        <h4 class="text-3xl font-semibold">
+          ¡Más sobre mí!
+        </h4>
         <h5 class="text-lg mt-0 mb-2 text-gray-700">
-	   Puedes encontrarme en cualquiera de estas plataformas, te responderé lo antes posible
-	</h5>
+	        Puedes encontrarme en cualquiera de estas plataformas, ¡agradeceré que te pases!
+	      </h5>
         <div class="mt-6">
           <button
-            class="bg-white text-blue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-            type="button"
-          >
-	    <a href="https://twitter.com/jperezhid_">
-            <i class="flex fab fa-twitter"></i></button
-          ><button
             class="bg-white text-blue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
             type="button"
-          >
-	    <a href="https://www.linkedin.com/in/javier-p%C3%A9rez-hidalgo/">
-            <i class="flex fab fa-linkedin"></i></button
-          ><button
-            class="bg-white text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
-            type="button"
-          >
-	    <a href="https://www.instagram.com/javierpzh/">
-            <i class="flex fab fa-instagram"></i></button
-          ><button
+            onclick="location.href='https://www.linkedin.com/in/javier-p%C3%A9rez-hidalgo/';">
+            <i class="flex fab fa-linkedin"></i>
+          </button>
+          <button
             class="bg-white text-gray-900 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 p-3"
             type="button"
-          >
-	    <a href="https://github.com/javierpzh">
-            <i class="flex fab fa-github"></i>
+            onclick="location.href='https://github.com/javierpzh';">
+	          <i class="flex fab fa-github"></i>
           </button>
         </div>
-
         <div class="text-gray-600 text-sm py-1 mt-4">
-	  </a
-	  class="text-gray-600 hover:text-gray-900"
+	        </a
+	          class="text-gray-600 hover:text-gray-900"
           > &nbsp;<a target="_blank" rel="noreferrer"></a>
         </div>
       </div>
@@ -45,62 +33,55 @@
         <div class="flex flex-wrap items-top mb-6 mt-4">
           <div class="w-full lg:w-4/12 md:w-6/12 px-0 ml-auto">
             <span
-              class="block uppercase text-gray-600 text-sm font-semibold mb-2"
-              >Enlaces de ayuda</span
-            >
+              class="block uppercase text-gray-600 text-sm font-semibold mb-2">
+              Enlaces de ayuda
+            </span>
             <ul class="list-unstyled">
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="/about"
-                  >Sobre mí</a
-                >
+                  href="/about">
+                  Sobre mí
+                </a>
               </li>
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="/blog"
-                  >Blog</a
-                >
+                  href="/blog">
+                  Blog
+                </a>
               </li>
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="https://www.github.com/javierpzh"
-                  >GitHub</a
-                >
+                  href="https://www.linkedin.com/in/javier-p%C3%A9rez-hidalgo/">
+                  LinkedIn
+                </a>
+              </li>
+              <li>
+                <a
+                  class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
+                  href="https://www.github.com/javierpzh">
+                  GitHub
+                </a>
               </li>
             </ul>
           </div>
-          <div class="w-full lg:w-4/12 md:w-6/12 mt-4 sm:mt-0 md:px-4">
+          <!-- <div class="w-full lg:w-4/12 md:w-6/12 mt-4 sm:mt-0 md:px-4">
             <span
-              class="block uppercase text-gray-600 text-sm font-semibold mb-2"
-              >Otros recursos</span
-            >
+              class="block uppercase text-gray-600 text-sm font-semibold mb-2">
+              Otros recursos
+            </span>
             <ul class="list-unstyled">
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="https://github.com/abhinavs/cookie/blob/master/LICENSE.md"
-                  >MIT License</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="/privacy-policy"
-                  >Privacy Policy</a
-                >
-              </li>
-              <li>
-                <a
-                  class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                  href="/contact"
-                  >Contáctame</a
-                >
+                  href="/privacy-policy">
+                  Privacy Policy
+                </a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
