--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,13 @@
               <li>
                 <a
                   class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
+                  href="/">
+                  Inicio
+                </a>
+              </li>
+              <li>
+                <a
+                  class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
                   href="/about">
                   Sobre mí
                 </a>
